--- a/Backend/package.json
+++ b/Backend/package.json
@@ -10,7 +10,7 @@
   "dependencies": {
     "@langchain/community": "^0.0.20",
     "@langchain/google-genai": "^0.0.20",
-    "@pinecone-database/pinecone": "^1.0.0",
+    "@pinecone-database/pinecone": "^6.1.1",
     "axios": "^1.6.8",
     "body-parser": "^1.20.2",
     "cheerio": "^1.0.0-rc.12",
@@ -18,6 +18,7 @@
     "dotenv": "^16.3.1",
     "exceljs": "^4.3.0",
     "express": "^4.18.2",
+    "fast-xml-parser": "^5.2.5",
     "google-auth-library": "^8.9.0",
     "langchain": "^0.1.37",
     "mammoth": "^1.7.0",
