--- a/Backend/package.json
+++ b/Backend/package.json
@@ -13,7 +13,7 @@
     "@pinecone-database/pinecone": "^6.1.1",
     "axios": "^1.6.8",
     "body-parser": "^1.20.2",
-    "cheerio": "^1.0.0-rc.12",
+    "cheerio": "^1.1.0",
     "cors": "^2.8.5",
     "dotenv": "^16.3.1",
     "exceljs": "^4.3.0",
@@ -21,8 +21,10 @@
     "fast-xml-parser": "^5.2.5",
     "google-auth-library": "^8.9.0",
     "langchain": "^0.1.37",
-    "mammoth": "^1.7.0",
-    "pdf-parse": "^1.1.1"
+    "mammoth": "^1.9.1",
+    "pdf-parse": "^1.1.1",
+    "xlsx": "^0.18.5",
+    "xml2js": "^0.6.2"
   },
   "devDependencies": {
     "nodemon": "^3.0.3"
