--- a/Backend/package.json
+++ b/Backend/package.json
@@ -15,13 +15,14 @@
     "body-parser": "^1.20.2",
     "cheerio": "^1.1.0",
     "cors": "^2.8.5",
-    "dotenv": "^16.3.1",
+    "dotenv": "^16.6.1",
     "exceljs": "^4.3.0",
     "express": "^4.18.2",
     "fast-xml-parser": "^5.2.5",
     "google-auth-library": "^8.9.0",
     "langchain": "^0.1.37",
     "mammoth": "^1.9.1",
+    "node-fetch": "^3.3.2",
     "pdf-parse": "^1.1.1",
     "xlsx": "^0.18.5",
     "xml2js": "^0.6.2"
